--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/db_example
 spring.datasource.username=root
 spring.datasource.password=vudang95
+# *** To disable/enable Spring Security ***
+security.ignored=/**
+spring.security.enabled=false
+management.security.enabled=false
+security.basic.enabled=false
+#security.oauth2.resource.filter-order = 3
