--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,26 @@
             <artifactId>jjwt</artifactId>
             <version>${jjwt.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.aptech.foodmarket</groupId>
+            <artifactId>food_market</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aptech.foodmarket</groupId>
+            <artifactId>food_market</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aptech.foodmarket</groupId>
+            <artifactId>food_market</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aptech.foodmarket</groupId>
+            <artifactId>food_market</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
         <!--<dependency>-->
             <!--<groupId>com.h2database</groupId>-->
