--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.15</version>
         </dependency>
+        <dependency>
+            <groupId>com.paypal.sdk</groupId>
+            <artifactId>rest-api-sdk</artifactId>
+            <version>1.9.3</version>
+        </dependency>
     </dependencies>
 
     <build>
